--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-native-animatable": "^1.3.2",
     "react-native-config": "^0.11.7",
     "react-native-device-info": "1.6.1",
+    "react-native-elements": "^1.1.0",
     "react-native-gesture-handler": "1.0.9",
     "react-native-i18n": "2.0.14",
     "react-native-vector-icons": "6.1.0",
